# VListakte

./: .example.env  .gitignore  README.md  docker-compose.yaml  main.py  manage.py  middleware.py  migrator.py  migrator_new.py  models.py  pyproject.toml  requirements.txt  settings.py
backend/: Dockerfile  entrypoint.sh
backend/app/: main.py  tests.py
extras/: validators.py  values_helper.py
libraries/: database.py  database_migrator.py  example.env  exceptions.py  files.py  request_helper.py
libraries/database/: async_database.py  database_migrator.py
libraries/orm/: core.py  (+2 more)
main/: main.py
migrations/: 002_add_account-2022-03-11-20-07-36.py  002_user-2022-03-11-22-26-57.py  003_add_some_field_to_account-2022-03-11-20-07-48.py  003_user_add_usertoken-2022-03-11-22-52-48.py  004_user-2022-03-11-22-26-57.py  004_user_roles_mtm-2022-03-12-18-44-31.py  005_create_blog-2022-04-07-18-47-09.py  005_user_add_usertoken-2022-03-11-22-52-48.py  006_create_posts-2022-06-14-03-13-39.py  006_user_roles_mtm-2022-03-12-18-44-31.py  007_create_blog-2022-04-07-18-47-09.py  007_post_views-2022-06-14-14-47-18.py  008_post_likes-2022-06-14-14-47-24.py  009_commentaries-2022-06-14-14-47-34.py  2022-03-10-01-21-10-initial_002.py  2022-03-10-01-35-52-initial_003.py  2022-03-10-01-58-41-initial_001.py  initial_002.py  initial_003.py
migrations1/: 002_create_users_2022-06-28-01-17-01.py  003_create_roles_2022-06-28-01-17-01.py  004_create_blogs_2022-06-28-01-17-01.py  005_create_posts_2022-06-28-01-17-01.py  006_create_commentaries_2022-06-28-01-17-01.py
wisplay/: asd.py
(+40 files in other folders)
